--- a/Cortes_ProjectR.Rmd
+++ b/Cortes_ProjectR.Rmd
@@ -21,6 +21,8 @@ library(biomaRt)
 library(tidyr)
 library(ggalluvial)
 library(ggrepel)
+library(gprofiler2)
+
 ```
 
 ### Purpose
@@ -97,7 +99,7 @@ DESeq2 was used to normalize data
 mouse_dds <- DESeqDataSetFromMatrix(mouse_counts, colData = mouse_info, design = ~ Exercise)
 mouse_dds <- DESeq(mouse_dds)
 #Contrast for log fold change, pre = numerator, post = denominator
-mouse_res <- results(mouse_dds, contrast = c("Exercise",  "pre", "post"))
+mouse_res <- results(mouse_dds, contrast = c("Exercise", "post", "pre"))
 write.csv(as.data.frame(mouse_res), file = "Mouse_DESeq2_results.csv")
 
 mouse_vsd <- vst(mouse_dds, blind = FALSE)
@@ -116,8 +118,8 @@ DESeq2 was used to normalize data
 #HUMAN normalization
 human_dds <- DESeqDataSetFromMatrix(human_data, colData = human_info, design = ~ PrePost)
 human_dds <- DESeq(human_dds)
-human_res <- results(human_dds, contrast = c("PrePost", "Pre", "Post"))
-write.csv(human_res, file = "Human_DESeq_Res.csv")
+human_res <- results(human_dds, contrast = c("PrePost", "Post", "Pre"))
+write.csv(human_res, file = "210518_Human_DESeq_Res.csv")
 human_vsd <- vst(human_dds, blind = FALSE)
 
 # trying to get lfc in order
@@ -229,63 +231,127 @@ conv_mouse <- conv_mouse[,c(2:17)]
 
 ```
 
-**ProjectR NMF Using CoGAPS**  
+**ProjectR NMF Using CoGAPS for Mouse**  
 How many patterns? Might need to finish FEA to figure out. 
 ```{r}
 #MOUSE NMF
 #parameters for GoGAPS
 params <- new("CogapsParams")
 params <- setParam(params, "seed", 1000)
-params <- setParam(params, "nPatterns", 12)
+params <- setParam(params, "nPatterns", 15)
 
 ```
 
+```{r}
+#chisq_matrix <- matrix(data = 0, nrow = 9, ncol = 10)
+#row.names(chisq_matrix) <- c(7:15)
+#colnames(chisq_matrix) <- c(1000, 3000, 5000, 6000, 7000, 8000, 10000, 12000, 15000, 25000, 30000, 35000)
+```
 
 ```{r}
 #CoGAPS to find patterns in the data
-AP_mouse <- CoGAPS(conv_mouse, params, nIterations = 1000)
-getMeanChiSq(AP_mouse)
+AP_mouse <- CoGAPS(conv_mouse, params, nIterations = 15000)
+chisq_matrix[9,9] <- getMeanChiSq(AP_mouse)
+chisq_matrix
+#best is 5000 iterations, 11 patterns?
+
+chisq_df <- as.data.frame(chisq_matrix)
+ggplot(as.data.frame(chisq_matrix)) + aes(x = 1000, y = c(7:15)) + geom_line()
+scatter.smooth(chisq_matrix)
+plot(chisq_df, 1000, type = "b")
+
 plot(AP_mouse)
+
+
 ```
+**ProjectR NMF Using CoGAPS for Human**  
 
 ```{r}
-#Trying to plot amplitude
-#mouse_featloadings <- as.matrix(AP_mouse)
-#mouse_featloadings_df <- as.data.frame(mouse_featloadings)
-#row.names(mouse_featloadings) <- row.names(mouse_info)
-#mouse_amp <- ggplot(mouse_featloadings_df, aes(axis1 = c(1:16), y = V1))
-#mouse_amp <- mouse_amp + geom_line()
-#mouse_amp
-
-#Trying alluvial plots using ProjectR's alluvial plot function
-#samplenames <- colnames(conv_mouse)
-#par(bty = "c", ljoin = "mitre")
-#mouse_matplot <- 
-#matplot(mouse_featloadings, type = "b", pch = 15:18, col = c(1:4,6), xlab = "Samples", ylab = "Amplitude", main = "Gene Weights of Samples by Patterns")
-#legend("topright", pch = 15:18, legend = c("Pattern_1", "Pattern_2", "..."), col = c(1:4, 6))
-
-#mouse_matplot
+#CoGAPS to find patterns in the data
+AP_human <- CoGAPS(human_symbol_data, params, nIterations = 6000)
+getMeanChiSq(AP_human)
+plot(AP_human)
 ```
 
-Boxplot for amplitudes
+Boxplot for Patterns in Mouse
 ```{r}
 mouse_samplefactors <- AP_mouse@sampleFactors %>% as.data.frame() 
 #%>% rownames_to_column(., var = "Sample")
-#mouse_samplefactors <- cbind(mouse_samplefactors, Exercise = mouse_info$Exercise)
+mouse_samplefactors <- cbind(mouse_samplefactors, Exercise = mouse_info$Exercise)
 
-#mouse_samplefactors_split <- as.numeric(factor(mouse_samplefactors$Exercise)) %>% cbind(mouse_samplefactors, ExerciseFactors = mouse_samplefactors_split)
+exercisefactors <- as.numeric(factor(mouse_samplefactors$Exercise)) 
+mouse_samplefactors_split <- cbind(mouse_samplefactors, ExerciseFactors = exercisefactors)
+mouse_samplefactors_split <- subset(mouse_samplefactors_split, select = -Exercise)
 #mouse_samplefactors_split <- split(mouse_samplefactors, mouse_samplefactors$ExerciseFactors)
 #mouse_samplefactors <- as.data.frame(mouse_samplefactors)
 
 #Struggling with ggplot
 #mouse_boxplot <- ggplot(mouse_samplefactors, aes(x = Exercise, y = Pattern_2)) + geom_boxplot()
-mouse_boxplot
+#mouse_boxplot
 
-baseboxplot <- boxplot(mouse_samplefactors, xlab = "NMF Patterns", ylab = "Sample Weights", las = 2, main = "Sample Factors")
+baseboxplot <- 
+boxplot(mouse_samplefactors_split, xlab = "NMF Patterns", ylab = "Sample Weights", las = 2, main = "Sample Factors", subset = mouse_samplefactors_split$ExerciseFactors == 2, col = "red")
+boxplot(mouse_samplefactors_split, las = 2, subset = mouse_samplefactors_split$ExerciseFactors == 1, col = "blue", add = TRUE)
+#did not work
+
 #try splitting into two matrices, pre and post, and then use add to "add boxplot to current plot"
 
+#try grouping pre/post exercise into two different matrices, and then combine them into a boxplot
+pre_exercise <- filter(mouse_samplefactors, Exercise == "pre")
+pre_exercise <- subset(pre_exercise, select = -Exercise)
+post_exercise <- filter(mouse_samplefactors, Exercise == "post")
+post_exercise <- subset(post_exercise, select = -Exercise)
+#base r boxplot
+boxplot_factors_post <- boxplot(post_exercise, las = 2, ylab = "Sample Factors", main = "Mouse Post Exercise Patterns", col = "powderblue")
+#add data points
+stripchart(post_exercise, vertical = TRUE, method = "jitter", add = TRUE, pch = 20, col = 'black')
+boxplot_factors_pre <- boxplot(pre_exercise, las = 2, ylab = "Sample Factors", main = "Mouse Pre Exercise Patterns", col = "plum2")
+stripchart(pre_exercise, vertical = TRUE, method = "jitter", add = TRUE, pch = 20, col = 'black')
 ```
 
+```{r}
+mouse_featureLoadings <- AP_mouse@featureLoadings %>% as.data.frame() 
+boxplot_loadings <- boxplot(mouse_featureLoadings, xlab = "NMF Patterns", ylab = "Amplitude", las = 2, main = "Mouse Feature Loadings")
+
+
+```
+ Boxplot for Patterns in Human
+```{r}
+human_samplefactors <- AP_human@sampleFactors %>% as.data.frame() 
+#%>% rownames_to_column(., var = "Sample")
+human_samplefactors <- cbind(human_samplefactors, Exercise = human_info$PrePost)
+
+#exercisefactors_human <- as.numeric(factor(human_samplefactors$Exercise)) 
+#human_samplefactors_split <- cbind(human_samplefactors, ExerciseFactors = exercisefactors)
+#human_samplefactors_split <- subset(human_samplefactors_split, select = -Exercise)
+
+#mouse_samplefactors_split <- split(mouse_samplefactors, mouse_samplefactors$ExerciseFactors)
+#mouse_samplefactors <- as.data.frame(mouse_samplefactors)
+
+#Struggling with ggplot
+#mouse_boxplot <- ggplot(mouse_samplefactors, aes(x = Exercise, y = Pattern_2)) + geom_boxplot()
+#mouse_boxplot
+
+baseboxplot <- 
+boxplot(mouse_samplefactors_split, xlab = "NMF Patterns", ylab = "Sample Weights", las = 2, main = "Sample Factors", subset = mouse_samplefactors_split$ExerciseFactors == 2, col = "red")
+boxplot(mouse_samplefactors_split, las = 2, subset = mouse_samplefactors_split$ExerciseFactors == 1, col = "blue", add = TRUE)
+#did not work
+
+#try splitting into two matrices, pre and post, and then use add to "add boxplot to current plot"
+
+#try grouping pre/post exercise into two different matrices, and then combine them into a boxplot
+pre_exercise_human <- filter(human_samplefactors, Exercise == "Pre")
+pre_exercise_human <- subset(pre_exercise_human, select = -Exercise)
+post_exercise_human <- filter(human_samplefactors, Exercise == "Post")
+post_exercise_human <- subset(post_exercise_human, select = -Exercise)
+#base r boxplot
+boxplot_factors_post_human <- boxplot(post_exercise_human, las = 2, ylab = "Sample Factors", main = "Human Post Exercise Patterns", col = "powderblue")
+#add data points
+stripchart(post_exercise_human, vertical = TRUE, method = "jitter", add = TRUE, pch = 20, col = 'black')
+boxplot_factors_pre_human <- boxplot(pre_exercise_human, las = 2, ylab = "Sample Factors", main = "Human Pre Exercise Patterns", col = "plum2")
+stripchart(pre_exercise_human, vertical = TRUE, method = "jitter", add = TRUE, pch = 20, col = 'black')
+```
+ 
  
 **Heatmap of Mouse NMF**  
 Visualizing NMF object
@@ -300,6 +366,8 @@ NMF_mouse <-heatmap.2(as.matrix(AP_mouse),col=bluered, trace='none',
 pdf("NewMouse_NMF_nPat14_nIt5000.pdf", NMF_mouse)
 NMF_mouse
 ```
+
+
 **NMF Projection**  
 The mouse NMF patterns can then be projected onto the human data
 ```{r}
@@ -309,12 +377,12 @@ human_NMF <- projectR(human_data,loadings=AP_mouse, full=TRUE,
                      dataNames=rownames(human_data))
 
 #Using metadata and NMF projection to make a dataframe that can be plotted
- human_meta <- column_to_rownames(human_info, var = "SRR")
+#human_meta <- column_to_rownames(human_info, var = "SRR")
 #dNMF <- human_NMF %>% data.frame() %>% t() %>% cbind(., )
-projection_NMF <- human_NMF$projection %>% t() %>% cbind(., human_meta)
+projection_NMF <- human_NMF$projection %>% t() %>% cbind(., human_info)
 pval_NMF <- human_NMF$pval
 #plot pca
-projection_plot <- ggplot(projection_NMF, aes(x = Pattern_1, y = Pattern_2, colour = PrePost)) + geom_point() + ggtitle("Mouse Data NMF Patterns Projected onto Human Data")
+projection_plot <- ggplot(projection_NMF, aes(x = Pattern_3, y = Pattern_5, colour = PrePost)) + geom_point() + ggtitle("Mouse Data NMF Patterns Projected onto Human Data")
 projection_plot
 ggsave("NMF_Mouse_Projected_to_Human_14pat5000it.pdf", projection_plot)
 
@@ -323,6 +391,8 @@ ggsave("NMF_Mouse_Projected_to_Human_14pat5000it.pdf", projection_plot)
 
 **PC Projection**  
 Another method to projections. Principal components are found for mouse and human data. Mouse PC's are used for loadings and projected onto human data.  
+  
+Make PC's
 ```{r}
 pc_human <- prcomp(t(human_symbol_data))
 pc_mouse <- prcomp(t(conv_mouse))
@@ -331,7 +401,8 @@ pc_var_mouse <- round(((pc_mouse$sdev)^2/sum(pc_mouse$sdev^2))*100,2)
 pca_mouse_df <- data.frame(cbind(pc_mouse$x, mouse_info))
 
 ```
-
+  
+Project PC's
 ```{r}
 PCA_projectr <- projectR(human_data, loadings = pc_mouse, full = TRUE, dataNames = rownames(human_data))
 human_meta_t <- t(human_meta)
@@ -347,26 +418,7 @@ projected_PCA
 ggsave("PCA_Method_Mouse_Projected_onto_Human.pdf", projected_PCA)
 ```
 
-```{r}
-#Alluvial Plot
-#need a character vector of annotations for alluvial
-mouse_GO_list <- mouse_symbol_GO$ONTOLOGY
-human_GO_t <- t(human_symbol_data_GO)
-alluvial <- alluvialMat(projection = human_NMF, annotations = human_info$BMI, plot = TRUE)
-alluvial
 
-ggalluvial <- ggplot(data = mouse_DE_top50,
-       aes(axis1 = CON_pre4, axis2 = CON_post4, y = X) +
-  scale_x_discrete(limits = c("Sample", "PrePost Exercise"), expand = c(.2, .05)) +
-  xlab(" ") +
-  geom_alluvium(aes(fill = BMI)) +
-  geom_stratum() +
-  geom_text(stat = "stratum", aes(label = after_stat(stratum))) +
-  theme_minimal() +
-  ggtitle(" "))
-
-ggalluvial
-```
 
 **ProjectR Clustering Method**  
 There’s 2 methods: cluster2pattern finds correlation of each gene’s expression by mean of cluster to define continuous weights. Then intersector tests significant overlap between 2 clustering objects. For these purposes, I think cluster2pattern is better for finding what we want (differences between clusters rather than overlaps). Requires a clustering object first.
@@ -411,6 +463,32 @@ pdf(file = "Mouse_Hclust_Dendrogram.pdf", hclust_dendro_sig)
 #mouse_clusterplotr <- clusterPlotR(mouse_top50, hclust_fit, NC = 3)
 ```
 
+
+**Clustering in Human Data**  
+```{r}
+#TOP 50 DIFFERENTIALLY EXPRESSED GENES
+human_stdevs <- apply(human_symbol_data, 1, sd)
+human_stdev <- cbind(human_symbol_data, human_stdevs)
+human_stdev <- slice_max(human_stdev, order_by = human_stdevs, n = 50)
+human_top250 <- human_stdev[,-17]
+write.csv2(human_top250, file = "Human_Top50_DEG.csv")
+
+#  Hierarchical Clustering with Bootstrapped p values
+#pvclust() provides p-values for hierarchical clustering based on multiscale bootstrap resampling-clusters that are highly supported by the data will have large p values.
+#pvclust clusters columns, not rows: transpose your data before using
+
+fit_human <- pvclust(human_top250, method.hclust="average",
+   method.dist="euclidean")
+human_hclust_dendro_sig <- plot(fit_human) 
+#pvrect(fit, alpha=.90) # add rectangles around groups highly supported by the data
+
+#pdf(file = "Mouse_Hclust_Dendrogram.pdf", hclust_dendro_sig)
+
+##LETSDOAHEATMAP!! :) 
+
+```
+
+
 Output of the cluster2pattern function is a pclust class object; specifically, a matrix of
 genes (rows) by clusters (columns). A gene’s value outside of its assigned cluster is zero. For
 the cluster containing a given gene, the gene’s value is the corelation of the gene’s expression
@@ -431,21 +509,24 @@ cluster_plot
 #mouse_clusterplot <- clusterPlotR(cdata = mouse_top50, cls = hclust_fit, NC = 1, mouse_info$Exercise)
 #Error in matrix(ncol = dim(cData)[2], nrow = length(cls1)) : non-numeric matrix extent
 ```
+
 Projecting mouse clusters onto human data
 ```{r}
 #need to use the top 50 genes from mouse DE to pull those genes from human and then project cluster object from cluster2pattern onto human data 
 top50_list <- rownames_to_column(mouse_top50, var = "SYMBOL")
 human_list <- rownames_to_column(human_symbol_data_GO, var = "SYMBOL")
 top50_list <- semi_join(human_list, top50_list, by = "SYMBOL")
-human_top50 <- column_to_rownames(top50_list, var = "SYMBOL")
-human_top50 <- human_top50[,5:62]
-human_top50 <- as.matrix(human_top50)
+mouseToHumanTop50 <- column_to_rownames(top50_list, var = "SYMBOL")
+mouseToHumanTop50 <- mouseToHumanTop50[,5:62]
+mouseToHumanTop50 <- as.matrix(mouseToHumanTop50)
 
 ```
 
 
 ```{r}
-cluster_projection <- projectR(human_top50, loadings = mouse_clusters, full = TRUE, dataNames = rownames(human_top50))
+
+
+cluster_projection <- projectR(mouseToHumanTop50, loadings = mouse_clusters, full = TRUE, dataNames = rownames(mouseToHumanTop50))
 #combining projection with metadata and preparing for PCA
 cluster_projection_t <- t(cluster_projection[[1]])
 cluster_projection_df <- cbind(cluster_projection_t, human_meta)
@@ -465,6 +546,7 @@ mouse_de <- cbind(LFC = mouse_res$log2FoldChange, Pval = mouse_res$pvalue)
 row.names(mouse_de) <- row.names(mouse_res)
 rownames(mouse_de) <- sub("\\..*", "", rownames(mouse_de))
 mouse_de_df <- mouse_de %>% as.data.frame() %>% rownames_to_column(., "ENSEMBL")
+
 ```
 
 ```{r}
@@ -477,28 +559,8 @@ write.csv(mouse_symbol_GO_de, "Mouse_DE_GO.csv")
 mouse_symbol_de <- mouse_symbol_GO_de[,c(5,6)]
 ```
 
-```{r}
-#Mouse symbols need to be converted to human symbols for downstream analysis
-#Use convertMouseGeneList to convert to human genes
-#mouse_to_human_genes_de <- convertMouseGeneList(mouse_anno$SYMBOL)
-#conv_mouse_de <- mouse_symbol_de %>% rownames_to_column(., var = "MGI.symbol") %>% #left_join(., mouse_to_human_genes_ge, by = "MGI.symbol")
 
-#determine non-NA genes
-#non_na_mouse_de <- which(is.na(conv_mouse_de$HGNC.symbol) == FALSE)
 
-#return only the genes with annotations using indices
-#conv_mouse_de <- conv_mouse_de[non_na_mouse_de, ]
-
-#determine indices for non-duplicated genes
-#no_dups_mouse_de <- which(duplicated(conv_mouse_de$HGNC.symbol) == FALSE)
-
-#return only non-dup genes using indices
-#conv_mouse_de <- conv_mouse_de[no_dups_mouse_de, ]
-#rownames(conv_mouse_de) <- NULL 
-#conv_mouse_de <- conv_mouse_de %>% as.data.frame() %>% column_to_rownames(., var = "HGNC.symbol") 
-#conv_mouse_de <- conv_mouse_de[,c(2:17)]
-
-```
 
 Might try to visualize using UMAP (Uniform Manifold Approximation and Projection)
 ```{r}
@@ -509,13 +571,75 @@ Might try to visualize using UMAP (Uniform Manifold Approximation and Projection
 ```
 ```{r}
 #Gene weights by latent variables
-mouse_geneweights <- AP_mouse@loadingStdDev
-mouse_geneweights2 <- rownames_to_column(as.data.frame(mouse_geneweights), var = "SYMBOL")
-mouse_go2 <- rownames_to_column(mouse_symbol_GO, var = "SYMBOL")
-mouse_weightgo <- left_join(mouse_geneweights2, mouse_go2, by = "SYMBOL")
+#mouse_geneweights <- AP_mouse@loadingStdDev
+#mouse_geneweights2 <- rownames_to_column(as.data.frame(mouse_geneweights), var = "SYMBOL")
+#mouse_go2 <- rownames_to_column(mouse_symbol_GO, var = "SYMBOL")
+#mouse_weightgo <- left_join(mouse_geneweights2, mouse_go2, by = "SYMBOL")
 ##NOTICED: mouse_go has not been converted to human .. 
 
 #mouse_geneweights_matrix <- rownames_to_column(., var = "") left_join(mouse_geneweights )
+
+```
+
+**Functional Enrichment Analysis**  
+
+GO (attempt)
+```{r}
+#Look at GO first
+#first, use annotation dbi with AP_mouse@featureLoadings
+mouse_fea
+amp_anno <- AnnotationDbi::select(org.Hs.eg.db, keys = rownames(mouse_featureLoadings), columns = c("GO"), keytype = "SYMBOL")
+  #mouse_featureLoadings
+#returns multiple ontology terms for each gene... Not sure how to decide which to keep 
+
+```
+
+PathfindR  
+```{r}
+#input needs to be a dataframe with genes and p values, so each pattern will need its own dataframe
+#sample_factors has already been extracted from AP_human, need to do the same with the stdev
+human_feature <- as.data.frame(AP_human@featureLoadings)
+human_feature_stdev <- as.data.frame(AP_human@loadingStdDev)
+pattern6_human <- dplyr::select(human_feature, Pattern_6) %>% cbind(., StdDev = human_feature_stdev$Pattern_6)
+pattern6_human
+
+NMF_projection <- human_NMF$projection
+NMF_pval <- human_NMF$pval
+NMF_pattern6 <- cbind(NMF_projection)
+
+#look into exclude_iea
+gost_res <- gost(query = row.names(human_feature), organism = "hsapiens", ordered_query = FALSE, significant = TRUE, exclude_iea = FALSE, measure_underrepresentation = FALSE, evcodes = FALSE, 
+                user_threshold = 0.05, correction_method = "g_SCS", 
+                domain_scope = "annotated", custom_bg = NULL, 
+                numeric_ns = "", sources = NULL, as_short_link = FALSE)
+head(gost_res$result)
+
+gost_plot <- gostplot(gost_res, capped = TRUE, interactive = TRUE)
+gost_plot
+gost_plot2 <- gostplot(gost_res, capped = FALSE, interactive = FALSE)
+gost_plot2
+```
+
+
+Alluvial Plot  
+```{r}
+#Alluvial Plot
+#need a character vector of annotations for alluvial
+mouse_GO_list <- mouse_symbol_GO$ONTOLOGY
+human_GO_t <- t(human_symbol_data_GO)
+alluvial <- alluvialMat(projection = human_NMF, annotations = human_info$BMI, plot = TRUE)
+alluvial
+
+ggalluvial <- ggplot(data = mouse_DE_top50,
+       aes(axis1 = CON_pre4, axis2 = CON_post4, y = X) +
+  scale_x_discrete(limits = c("Sample", "PrePost Exercise"), expand = c(.2, .05)) +
+  xlab(" ") +
+  geom_alluvium(aes(fill = BMI)) +
+  geom_stratum() +
+  geom_text(stat = "stratum", aes(label = after_stat(stratum))) +
+  theme_minimal() +
+  ggtitle(" "))
+
 
 ```
 
