CMAP and LINCS methods of SignatureSearch used with human data, further analyzed using TSEA and DSEA and visualizatoins

--- a/Cortes_SignatureSearch.Rmd
+++ b/Cortes_SignatureSearch.Rmd
@@ -1,10 +1,11 @@
 ---
-title: "Cortes_DrugRepurposing"
+title: "SignatureSearch Cortes"
 author: "Lizzy Ramsey"
 date: "5/8/2021"
 output: html_document
 ---
-
+  
+  
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 BiocManager::install("signatureSearch")
@@ -16,9 +17,15 @@ library(EnsDb.Hsapiens.v75)
 library(AnnotationDbi)
 ```
 
-## R Markdown
+## Purpose
+Using differentially expressed genes from pre/post exercise human muscle, SignatureSearch was used to find drugs of similar perturbation signatures as possible candidates for Cortes R01 prelim data analysis for "exercise mimetics" for Alzheimers Disease.  
+Dataset:  
+GitHub:  
+System which operations were done on: MacBook Pro (16-inch, 2019),  Processor 2.4 GHz 8-Core Intel Core i9, Memory 64 GB 2667 MHz DDR4, Graphics AMD Radeon Pro 5300M 4 GB Intel UHD Graphics 630 1536 MB  
 
-
+**Contents**
+- CMAP Method  
+- LINCS Method  
 
 ```{r}
 #reference database
@@ -28,7 +35,7 @@ cmap <- eh[["EH3223"]]; cmap_expr <- eh[["EH3224"]]
 Load in data
 ```{r}
 #DESeq2 results
-human_deseq2_res <- read.csv("Human_DESeq_Res.csv", header = TRUE, row.names = 1)
+human_deseq2_res <- read.csv("210518_Human_DESeq_Res.csv", header = TRUE, row.names = 1)
 
 
 #LFC non NA genes
@@ -41,7 +48,7 @@ rownames(human_LFC) <- sub("\\..*", "", rownames(human_LFC))
 Find up and down genes
 ```{r}
 #showing up empty for LFC > 2 and p-adj < 0.05, so changed LFC to 1.5
-human_up_df <- human_LFC[human_LFC$log2FoldChange >1.5 & human_LFC$padj <0.05,]
+human_up_df <- human_LFC[human_LFC$log2FoldChange >1 & human_LFC$padj <0.05,]
 ```
 
 ```{r}
@@ -55,7 +62,7 @@ human_up_list <- mapIds(EnsDb.Hsapiens.v75, keys = human_up_list, column="ENTREZ
 
 
 ```{r}
-human_down_df <- human_LFC[human_LFC$log2FoldChange < -1.5 & human_LFC$padj <0.05,]
+human_down_df <- human_LFC[human_LFC$log2FoldChange < -1 & human_LFC$padj <0.05,]
 ```
 
 ```{r}
@@ -79,15 +86,188 @@ qsig_cmap_human <- qSig(query = list(upset=as.character(human_up_list), downset=
 ```{r}
 cmap <- gess_cmap(qSig= qsig_cmap_human, chunk_size=5000)
 cmap_res <- result(cmap)[1:50,]
-write.csv2(cmap_res, file = "/Users/eramsey/Desktop/R21_210302/PreliminaryR21/output/SignatureSearch/210518_cmap_res_human.csv")
+write.csv2(cmap_res, file = "/Users/eramsey/Desktop/R21_210302/PreliminaryR21/output/SignatureSearch/210518_cmap_res_human_revDESeq2contrasts.csv")
 cmap_res
 #JEN : This table contains the search results for each perturbagen (here drugs) in the reference database ranked by their signature similarity to the query. For the CMAP method, the similarity metrics are raw_score and scaled_score. The raw score represents the bi-directional enrichment score (Kolmogorov-Smirnov statistic) for a given up/down query signature. Under the scaled_score column, the raw_score has been scaled to values from 1 to -1 by dividing positive scores and negative scores with the maximum positive score and the absolute value of the minimum negative score, respectively. The remaining columns in the search result table contain the following information. pert: name of perturbagen (e.g. drug) in the reference database; cell: acronym of cell type; type: perturbation type, e.g. compound treatment is trt_cp; trend: up or down when reference signature is positively or negatively connected with the query signature, respectively; N_upset or N_downset: number of genes in the query up or down sets, respectively; t_gn_sym: gene symbols of the corresponding drug targets.
 ```
 Visualize GESS Results
 ```{r}
-#why temzolomide? can I change this?
-drugs_top15 <- c(unique(cmap_res$pert)[1:15], "temzolomide")
-gess_res_vis(cmap_res, drugs = drugs_top15, col = "scaled_score")
+#drugs_top15 <- unique(cmap_res$pert)[1:15]
+drugs_top30 <- unique(result(cmap)$pert)[1:30]
+gess_res_vis(cmap_res, drugs = drugs_top30, col = "scaled_score")
+
+```
+**TSEA**  
+The following introduces how to perform TSEA on drug-based GESS results using as functional annotation systems GO, KEGG and Reactome pathways. ...  The specialized enrichment algorithms include Duplication Adjusted Hypergeometric Test (dup_hyperG), Modified Gene Set Enrichment Analysis (mGSEA) and MeanAbs (mabs).  
+ Internally, the latter converts the drug set to a target set, and then computes for it enrichment scores for each MF GO term based on the hypergeometric distribution. The enrichment results are stored in a feaResult object. It contains the organism information of the annotation system, and the ontology type of the GO annotation system. If the annotation system is KEGG, the latter will be “KEGG”. The object also stores the input drugs used for the enrichment test, as well as their target information.
+
+```{r}
+tsea_kegg_cmap_human <- tsea_dup_hyperG(drugs = drugs_top30[1:20], type = "KEGG",
+                               pvalueCutoff=0.5, qvalueCutoff = 0.5)
+
+result(tsea_kegg_cmap_human)
+```
+```{r}
+cmap_res_down <- cmap_res[cmap_res$trend =="down",]
+cmap_res_up <- cmap_res[cmap_res$trend =="up",]
+
+down_drug_cmap <- unique(cmap_res_down$pert)[1:20]
+up_drug_cmap <- unique(cmap_res_up$pert)[1:20]
+
+gess_res_vis(cmap_res, drugs = up_drug_cmap, col = "scaled_score")
+```
+
+```{r}
+dtnetplot(drugs = drugs(tsea_kegg_cmap_human), set = "hsa00140", 
+          desc="Steroid hormone biosynthesis")
+#u).
+```
+**DSEA**  
+Instead of translating ranked lists of drugs into target sets, as for TSEA, the functional annotation categories of the targets can be assigned to the drugs directly to perform Drug Set Enrichment Analysis (DSEA) instead. Since the
+drug lists from GESS results are usually unique, this strategy overcomes the duplication problem of the TSEA approach. This way classical enrichment methods, such as GSEA or tests based on the hypergeometric distribution, can be readily applied without major modifications to the underlying statistical methods. As explained above, TSEA and DSEA performed with the same enrichment statistics are not expected to generate identical results. Rather they often complement each other’s strengths and weaknesses.
+
+```{r}
+dsea_res_cmap <- dsea_hyperG(drugs = drugs_top30[1:20], type = "KEGG", 
+                            pvalueCutoff = 0.05, qvalueCutoff = 0.05, 
+                            minGSSize = 10, maxGSSize = 2000)
+result(dsea_res_cmap)
+write.csv2(result(dsea_res_cmap), file =  "/Users/eramsey/Desktop/R21_210302/PreliminaryR21/signatureSearch_outputs//210526_dsea_cmap_res_human.csv")
+#five top pathways KEGG upregulated or downregulated, KEGG usually has maps that relate to pathways, but some geens are linked to multiple pathways 
+#Are there genes that are linked to linked to multiple KEGG pathways?
+
+```
+
+
+```{r}
+dtnetplot(drugs = drugs(dsea_res_cmap), set = "hsa00140", 
+          desc="Steroid hormone biosynthesis")
+
+```
+
+**LINCS Method**  
+Subramanian et al. (2017) introduced a more complex GESS algorithm, here referred to as LINCS. While related to CMAP, there are several important differences among the two approaches. First, LINCS weights the query genes based on the corresponding differential expression scores of the GEPs in the reference database (e.g. LFC or z-scores). Thus, the reference database used by LINCS needs to store the actual score values rather than their ranks. Another relevant difference is that the LINCS algorithm uses a bi-directional weighted Kolmogorov-Smirnov enrichment statistic (ES) as similarity metric.  
+```{r}
+qsig_lincs_human <- qSig(query =list(upset=as.character(human_up_list), downset=as.character(human_down_list)), 
+                   gess_method="LINCS", refdb="lincs")
+
+```
+The similarity scores stored in the LINCS result table are summarized here. WTCS: Weighted Connectivity Score; WTCS_Pval: nominal p-value of WTCS; WTCS_FDR: false discovery rate of WTCS_Pval; NCS: normalized connectivity score; NCSct: NCS summarized across cell types; Tau: enrichment score standardized for a given database. The latter is only included in the result table if tau=TRUE in a gess_lincs function call. The example given is run with tau=FALSE, because the tau values are only meaningful when the complete LINCS database is used which is not the case for the toy database.  
+  
+The following provides a more detailed description of the similarity scores computed by the LINCS method. Additional details are available in the Supplementary Material Section of the Subramanian et al. (2017) paper.
+  
+WTCS: The Weighted Connectivity Score is a bi-directional ES for an up/down query set. If the ES values of an up set and a down set are of different signs, then WTCS is (ESup-ESdown)/2, otherwise, it is 0. WTCS values range from -1 to 1. They are positive or negative for signatures that are positively or inversely related, respectively, and close to zero for signatures that are unrelated.
+  
+WTCS_Pval and WTCS_FDR: The nominal p-value of the WTCS and the corresponding false discovery rate (FDR) are computed by comparing the WTCS against a null distribution of WTCS values obtained from a large number of random queries (e.g. 1000).
+  
+NCS: To make connectivity scores comparable across cell types and perturbation types, the scores are normalized. Given a vector of WTCS values w resulting from a query, the values are normalized within each cell line c and perturbagen type t to obtain the Normalized Connectivity Score (NCS) by dividing the WTCS value by the signed mean of the WTCS values within the subset of signatures in the reference database corresponding to c and t.
+  
+NCSct: The NCS is summarized across cell types as follows. Given a vector of NCS values for perturbagen p, relative to query q, across all cell lines c in which p was profiled, a cell-summarized connectivity score is obtained using a maximum quantile statistic. It compares the 67 and 33 quantiles of NCSp,c and retains whichever is of higher absolute magnitude.
+  
+Tau: The standardized score Tau compares an observed NCS to a large set of NCS values that have been pre-computed for a specific reference database. The query results are scored with Tau as a standardized measure ranging from 100 to -100. A Tau of 90 indicates that only 10% of reference perturbations exhibit stronger connectivity to the query. This way one can make more meaningful comparisons across query results.
+  
+```{r}
+lincs_human <- gess_lincs(qsig_lincs_human, sortby="NCS", tau=TRUE)
+result(lincs_human)[1:50,]
+lincs_res <- result(lincs_human)
+write.csv(lincs_res, file = "/Users/eramsey/Desktop/R21_210302/PreliminaryR21/signatureSearch_outputs/210526_lincs_human_res.csv")
+```
+
+```{r}
+drugs_lincs_top <- unique(lincs_res$pert)[1:20]
+gess_res_vis(lincs_res, drugs = drugs_lincs_top, col = "NCS")
+```
+
+```{r}
+lincs_res_down <- lincs_res[lincs_res$trend == "down",]
+down_drug_lincs <- unique(lincs_res_down$pert)[1:20]
+lincs_res_up  <- lincs_res[lincs_res$trend == "up",]
+up_drug_lincs <- unique(lincs_res_up$pert)[1:20]
+
+drugs_lincs_topdown <- unique(lincs_res_down$pert)[1:20]
+gess_res_vis(lincs_res, drugs = drugs_lincs_topdown , col = "NCS")
+
+```
+
+
+```{r}
+tsea_lincs_down <- tsea_dup_hyperG(drugs = drugs_lincs_topdown[1:20], type = "KEGG",
+                               pvalueCutoff=0.5, qvalueCutoff = 0.5)
+result(tsea_lincs_down)
+write.csv2(result(tsea_lincs_down), file =  "/Users/eramsey/Desktop/R21_210302/PreliminaryR21/signatureSearch_outputs/210526_lincs_tsea.csv")
+
+```
+
+
+```{r}
+dsea_res_lincs <- dsea_hyperG(drugs = drugs_lincs_topdown, type = "KEGG", 
+                            pvalueCutoff = 0.05 , qvalueCutoff = 0.05, 
+                            minGSSize = 2, maxGSSize = 2000)
+result(dsea_res_lincs)
+#0 rows
+```
+```{r}
+drugs_lincs_topup <- unique(lincs_res_up$pert)[1:20]
+gess_res_vis(lincs_res, drugs = drugs_lincs_topup , col = "NCS")
+```
+
+```{r}
+tsea_lincs_up <- tsea_dup_hyperG(drugs = drugs_lincs_topup[1:20], type = "KEGG",
+                               pvalueCutoff=0.5, qvalueCutoff = 0.5)
+result(tsea_lincs_up)
+write.csv2(result(tsea_lincs_up), file = "/Users/eramsey/Desktop/R21_210302/PreliminaryR21/signatureSearch_outputs/210526_lincs_up_tsea.csv" )
+```
+
+
+```{r}
+dsea_lincs_down <- dsea_hyperG(drugs = drugs_lincs_topdown, type = "KEGG", 
+                            pvalueCutoff = 0.05 , qvalueCutoff = 0.05, 
+                            minGSSize = 2, maxGSSize = 2000)
+result(dsea_lincs_down)
+
+```
+**GCMAP**  
+The Bioconductor gCMAP (Sandmann et al. 2014) package provides access to a related but not identical implementation of the original CMAP algorithm proposed by Lamb et al. (2006). It uses as query a rank transformed GEP and the reference database is composed of the labels of up and down regulated DEG sets. This is the opposite situation of the CMAP method, where the query is composed of the labels of up and down regulated DEGs and the database contains rank transformed GESs.  
+First, create matrix with zscores  
+```{r}
+DESEQ2_sig_df <- human_LFC[abs(as.numeric(human_LFC$log2FoldChange)) >2 & human_LFC$padj <0.05,]
+LOG <- as.numeric(DESEQ2_sig_df$log2FoldChange)
+
+IDS <- mapIds(EnsDb.Hsapiens.v75, keys= rownames(human_LFC) , column="ENTREZID", keytype="GENEID", multiVals="first")
+
+```
+
+
+```{r}
+names(IDS) <- NULL
+LOG_V2 <- LOG[!is.na(IDS)]
+IDS_V2 <-IDS[!is.na(IDS)]
+duplicated_genes <- unique(IDS_V2[duplicated(IDS_V2)])
+names(LOG_V2) <- IDS_V2
+
+fix<- c()
+for (i in 1:length(duplicated_genes)){
+  group <- LOG_V2[names(LOG_V2) == duplicated_genes[i]]
+ top <- group[group == max(abs(group))]
+ fix <- c(fix, top)
+}
+fix
+```
+
+```{r}
+LOG_V3 <- LOG_V2[!names(LOG_V2) %in% duplicated_genes]
+LOG_V4 <- c(LOG_V3, fix)
+LOG_V5 <- as.data.frame(LOG_V4)
+rownames(LOG_V5) <- names(LOG_V4)
+```
+
+```{r}
+#qsig_gcmap <- qSig(query =as.matrix(LOG_V5), gess_method = "gCMAP", refdb = "lincs")
+
+```
+
+**Spearman Correlation**  
+```{r}
+qsig_sp <- qSig(query = as.matrix(LOG_V5), gess_method = "Cor", refdb = "lincs")
 
 ```
 
